[package]
name = "near-event-stream-processor"
version = "0.0.1"
authors = ["Sigil Network <contact@sigilnet.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust library to process NEAR Event Streams "
repository = "https://github.com/sigilnet/near-event-stream-processor-rs"
readme = "README.md"
keywords = ["near", "event", "streaming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.5"
rdkafka = { version = "0.25", features = ["cmake-build", "ssl"] }
tokio = { version = "1.1", features = ["sync", "time"] }
futures = "0.3.5"
anyhow = { version = "1.0", features = ["backtrace"] }
tracing = "0.1.36"
derive_builder = "0.11.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.32"
